# mfug_levenshtein_difference_2016_07_07-

./: .gitignore  LevenshteinDifference.cabal  Makefile  README.md  demo.html  levenshtein-transition.js  script.html  slides.html  stack.yaml  template.html
benchmark_files/: bench.sh  bench_data_lazy.txt  bench_data_strict.txt  bench_output_lazy_p.txt  plot.sh  plot_lazy.gnuplot  plot_lazy_p.gnuplot  plot_strict.gnuplot
src/: Lev1.hs  Lev2.hs  Lev3.hs  Lev_I5.hs
test/: Spec.hs
