name:                LevenshteinDifference
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/LevenshteinDifference#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Lev1, Lev2, Lev3
  build-depends:       base >= 4.7 && < 5, criterion, array, nat, peano-inf
  default-language:    Haskell2010

executable LevenshteinDifference-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , LevenshteinDifference
                     , criterion
  default-language:    Haskell2010

executable LevenshteinDifference-bench
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , LevenshteinDifference
                     , criterion
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite LevenshteinDifference-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , LevenshteinDifference
                     , criterion
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/LevenshteinDifference
