name:                LevenshteinDifference
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/LevenshteinDifference#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Lev1, Lev2, Lev3
  build-depends:       base >= 4.7 && < 5, criterion, array, nat, peano-inf
  default-language:    Haskell2010

Benchmark bench-levenshtein
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    base
                    , time
                    , LevenshteinDifference
                    , criterion

source-repository head
  type:     git
  location: https://github.com/sordina/mfug_levenshtein_difference_2016_07_07-
